Fix picture alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,12 +29,17 @@
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    .logo-container {
-        padding-top: 0.5rem;
+    .page-title {
+        flex-direction: column;
         text-align: center;
+    }
+
+    .logo-container {
+        order: -1;
+        margin-bottom: 1rem;
 
         .logo {
-            width: 100px;
+            width: 120px;
             border-radius: 10px;
         }
     }
